<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/record_info"
	android:orientation="vertical" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent" 
	android:padding="3dp" >
	
	<TableLayout 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:stretchColumns="1" >
	
		<TableRow>
			<TextView 
				android:id="@+id/tv_profile_static" 
				android:textStyle="bold"
				android:textSize="20dp"
				android:text="@string/profile" />
	
			<TextView 
				android:id="@+id/tv_profile" 
				android:gravity="right"
				android:textSize="20dp"
				android:text="@string/test_profile" />
		</TableRow>
		
		<View
			android:layout_height="2dp"
			android:background="#FF909090" />
			
		<TableRow android:paddingTop="5dp">
			<TextView 
				android:id="@+id/tv_time_static" 
				android:textSize="16dp"
				android:text="@string/time" />
	
			<TextView 
				android:id="@+id/tv_time" 
				android:gravity="right"
				android:textSize="16dp"
				android:text="@string/zero_time" />
		</TableRow>
		
		<TableRow android:paddingTop="3dp">
			<TextView 
				android:id="@+id/tv_distance_static" 
				android:textSize="16dp"
				android:text="@string/distance" />
	
			<TextView 
				android:id="@+id/tv_distance" 
				android:gravity="right"
				android:textSize="16dp"
				android:text="@string/zero_distance" />
		</TableRow>
		
		<TableRow android:paddingTop="3dp">
			<TextView 
				android:id="@+id/tv_average_speed_static" 
				android:textSize="16dp"
				android:text="@string/average_speed" />
	
			<TextView 
				android:id="@+id/tv_average_speed" 
				android:gravity="right"
				android:textSize="16dp"
				android:text="@string/zero_speed" />
		</TableRow>
		
		<TableRow android:paddingTop="3dp">
			<TextView 
				android:id="@+id/tv_comment_static" 
				android:textSize="16dp"
				android:text="@string/comment" />
		</TableRow>
	</TableLayout>
	
	<TextView 
		android:id="@+id/tv_comment" 
		android:paddingTop="3dp"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_weight="10"
		android:textSize="16dp" />
	
		
	<LinearLayout
		android:orientation="horizontal"
      	android:layout_width="fill_parent"
      	android:layout_height="wrap_content">
			
		<Button
			android:id="@+id/bt_edit_comment"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:paddingTop="3dp" 
			android:text="@string/edit_comment" />
			
		<Button
			android:id="@+id/bt_show_on_map"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:paddingTop="3dp" 
			android:text="@string/show_on_map" />
	
		<Button
			android:id="@+id/bt_delete_record"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:paddingTop="3dp" 
			android:text="@string/delete_record" />
			
	</LinearLayout>
</LinearLayout>