<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent" 
	android:padding="3dp" >
	
	<TableLayout 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:stretchColumns="1" >
	
		<TableRow>
			<TextView 
				android:id="@+id/tv_profile_static" 
				android:textStyle="bold"
				android:textSize="20dp"
				android:text="@string/profile" />
	
			<TextView 
				android:id="@+id/tv_profile" 
				android:gravity="right"
				android:textSize="20dp"
				android:text="@string/test_profile" />
		</TableRow>
		
		<View
			android:layout_height="2dp"
			android:background="#FF909090" />
			
		<TableRow android:paddingTop="5dp">
			<TextView 
				android:id="@+id/tv_time_static" 
				android:textSize="16dp"
				android:text="@string/time" />
	
			<TextView 
				android:id="@+id/tv_time" 
				android:gravity="right"
				android:textSize="16dp"
				android:text="@string/zero_time" />
		</TableRow>
		
		<TableRow android:paddingTop="3dp">
			<TextView 
				android:id="@+id/tv_distance_static" 
				android:textSize="16dp"
				android:text="@string/distance" />
	
			<TextView 
				android:id="@+id/tv_distance" 
				android:gravity="right"
				android:textSize="16dp"
				android:text="@string/zero_distance" />
		</TableRow>
		
		<TableRow android:paddingTop="3dp">
			<TextView 
				android:id="@+id/tv_speed_static" 
				android:textSize="16dp"
				android:text="@string/speed" />
	
			<TextView 
				android:id="@+id/tv_speed" 
				android:gravity="right"
				android:textSize="16dp"
				android:text="@string/zero_speed" />
		</TableRow>
		
		<TableRow android:paddingTop="3dp">
			<TextView 
				android:id="@+id/tv_average_speed_static" 
				android:textSize="16dp"
				android:text="@string/average_speed" />
	
			<TextView 
				android:id="@+id/tv_average_speed" 
				android:gravity="right"
				android:textSize="16dp"
				android:text="@string/zero_speed" />
		</TableRow>
	</TableLayout>
	
	<TextView 
			android:id="@+id/tv_location_static"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingTop="3dp" 
			android:textSize="16dp"
			android:text="@string/location" />
	
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:paddingTop="3dp" >
					
		<TextView 
			android:id="@+id/tv_lon_static"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:textSize="16dp"
			android:text="@string/lon" />

		<TextView 
			android:id="@+id/tv_lon" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:gravity="center_horizontal"
			android:textSize="16dp"
			android:text="@string/zero_location" />

	
		<TextView 
			android:id="@+id/tv_lat_static" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:textSize="16dp"
			android:text="@string/lat" />

		<TextView 
			android:id="@+id/tv_lat" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:gravity="center_horizontal"
			android:textSize="16dp"
			android:text="@string/zero_location" />
	</LinearLayout>
	
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:paddingTop="3dp" >
		
		<TextView 
			android:id="@+id/tv_alt_static"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:textSize="16dp"
			android:text="@string/alt" />

		<TextView 
			android:id="@+id/tv_alt" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:gravity="center_horizontal"
			android:textSize="16dp"
			android:text="@string/zero_distance" />
			
		<TextView 
			android:id="@+id/tv_acc_static"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:textSize="16dp"
			android:text="@string/acc" />

		<TextView 
			android:id="@+id/tv_acc" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:gravity="center_horizontal"
			android:textSize="16dp"
			android:text="@string/zero_distance" />
	</LinearLayout>
	
	<View
		android:id="@+id/map_view"
		android:orientation="vertical"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_weight="10"
		android:paddingTop="3dp" />
	
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:paddingTop="3dp" >
		
	<!-- Button
		android:id="@+id/bt_pause_record"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:paddingTop="3dp" 
		android:text="@string/pause_record" / -->
		
	<Button
		android:id="@+id/bt_stop_record"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:paddingTop="3dp" 
		android:text="@string/stop_record" />
	</LinearLayout>
</LinearLayout>