<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical" >
  
  <TextView
  	android:id="@+id/tv_enter_comment_static"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_weight="1"
  	android:text="@string/enter_comment" />
  	
  <EditText
  	android:id="@+id/et_enter_comment"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:minLines="3"
  	android:layout_weight="3" />
  	
  <LinearLayout
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:layout_weight="1"
  	android:orientation="horizontal" >
  	
	  <Button
	  	android:id="@+id/bt_comment_save"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  	android:layout_weight="1"
	  	android:text="@string/save_comment" />
	  	
	  <Button
	  	android:id="@+id/bt_cancel"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  	android:layout_weight="1"
	  	android:text="@string/cancel" />
	  		
  </LinearLayout>
  	
</LinearLayout>
